2008-05-31  Edward Hervey  <edward.hervey@collabora.co.uk>

	Patch by: Bastien Nocera <hadess at hadess dot net>
	* gst/qtdemux/qtdemux.c: (qtdemux_tag_add_str),
	(qtdemux_parse_udta):
	* gst/qtdemux/qtdemux_fourcc.h:
	Improve meta-data handling, add 'comment', 'description' and
	'copyright' tag handling.
	Fixes #535935

2008-05-31  Julien Moutte  <julien@fluendo.com>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_find_keyframe),
	(gst_qtdemux_find_segment), (gst_qtdemux_perform_seek),
	(gst_qtdemux_seek_to_previous_keyframe),
	(gst_qtdemux_activate_segment), (gst_qtdemux_loop): Make sure we
	we don't clip the segment's stop using the main segment duration as
	that could crop quite some video frames. Make reverse playback support
	more robust and support edit lists. Support seeking to the last frame,
	and fix reverse looping playback. Add some debugging.
	* win32/common/config.h: Updated.

2008-05-31  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/equalizer/gstiirequalizer.c:
	(gst_iir_equalizer_transform_ip):
	Don't clip float/double samples, correctly unset passthrough mode
	and use better rounding for integer samples.

2008-05-30  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/equalizer/gstiirequalizer.c:
	(gst_iir_equalizer_band_set_property), (gst_iir_equalizer_init),
	(setup_filter), (set_passthrough), (update_coefficients),
	(gst_iir_equalizer_compute_frequencies),
	(gst_iir_equalizer_transform_ip):
	* gst/equalizer/gstiirequalizer.h:
	Update the filter coefficients only when needed in the transform_ip
	function and correctly set the element into passthrough mode if the
	gain of all bands is 0.

2008-05-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	Based on patch by: Sebastian Keller <sebastian-keller at gmx dot de>

	* gst/alpha/gstalpha.c: (gst_alpha_class_init), (gst_alpha_init),
	(gst_alpha_set_property), (gst_alpha_get_property),
	(gst_alpha_chroma_key_ayuv), (gst_alpha_chromakey_row_i420):