@@ -1,3 +1,10 @@
+2008-06-02  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* gst/videomixer/videomixer.c: (gst_videomixer_query_duration),
+	(gst_videomixer_query_latency):
+	When using gst_element_iterate_pads() one has to unref every pad
+	after usage.
+
 2008-05-31  Edward Hervey  <edward.hervey@collabora.co.uk>
 
 	Patch by: Bastien Nocera <hadess at hadess dot net>
